--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
